@@ -17,6 +17,7 @@ CACHE_PREFIX=#cookie_prefix_
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DATABASE=1
 
 FILES_PATH=/dev/shm/#mysql_db
 
