@@ -2312,17 +2312,41 @@ function GetDirectorySize($path)
  *
  * @return null|string|string[]
  */
-function formatQuery($query) {
+function formatQuery($query)
+{
     $query = preg_replace(
         '/\b(WHERE|FROM|GROUP BY|HAVING|ORDER BY|LIMIT|OFFSET|UNION|ON DUPLICATE KEY UPDATE|VALUES|SET)\b/',
-        "\n$0", $query
+        "\n$0",
+        $query
     );
     $query = preg_replace(
         '/\b(INNER|OUTER|LEFT|RIGHT|FULL|CASE|WHEN|END|ELSE|AND)\b/',
-        "\n\t$0", $query
+        "\n\t$0",
+        $query
     );
     $query = preg_replace("/\s+\n/", "\n", $query); // remove trailing spaces
     return $query;
+}
+
+/**
+ * @param $dir
+ */
+function rrmdir($dir)
+{
+    if (is_dir($dir)) {
+        $objects = scandir($dir);
+        foreach ($objects as $object) {
+            if ($object != "." && $object != "..") {
+                if (filetype($dir . "/" . $object) == "dir") {
+                    rrmdir($dir . "/" . $object);
+                } else {
+                    unlink($dir . "/" . $object);
+                }
+            }
+        }
+        reset($objects);
+        rmdir($dir);
+    }
 }
 
 if (file_exists(ROOT_DIR . 'public' . DIRECTORY_SEPARATOR . 'install')) {
